<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="516dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <Button
            android:id="@+id/btnInsertCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_customer" />

        <Button
            android:id="@+id/btnMakeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_new_idem" />

        <Button
            android:id="@+id/btnInsertDummyItemStockAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_store" />

        <Button
            android:id="@+id/btnMakeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_make_order" />

        <Button
            android:id="@+id/showShowStockItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_showShowStockItems" />

        <Button
            android:id="@+id/showStockItemAtributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_showStockItemAtributes" />

        <Button
            android:id="@+id/btnCountData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_data" />

        <TextView
            android:id="@+id/labelCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStockItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stock_plural" />

            <TextView
                android:id="@+id/labelCountStockItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/minus_one" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStockItemAttributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stock_attributes" />

            <TextView
                android:id="@+id/labelCountStockItemAttributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="90dp"
                android:text="@string/minus_one" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/bntClearData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/clear_data" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>