<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <EditText
        android:id="@+id/insert_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/edit_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/insert_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/insert_name"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/edit_barcode"
        android:inputType="number" />

    <EditText
        android:id="@+id/insert_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/insert_name"
        android:layout_marginTop="203dp"
        android:ems="10"
        android:hint="@string/edit_description"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/insert_barcode"
        android:layout_marginEnd="34dp"
        android:text="@string/btn_scan" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp"
        android:layout_marginStart="18dp"
        android:text="@string/btn_delete" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_delete"
        android:layout_marginEnd="19dp"
        android:text="@string/btn_add" />


</RelativeLayout>