<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/searchItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_name" />

    <ListView
        android:id="@+id/searchItemList"
        android:layout_width="match_parent"
        android:layout_height="299dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchItem" />

    <TextView
        android:id="@+id/selectedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tv_balance"
        android:layout_marginBottom="124dp"
        android:text="@string/text_item"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/selectedItem"
        android:layout_alignEnd="@+id/btn_make_order"
        android:ems="10"
        android:hint="@string/edit_quantity"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:text="@string/btn_next" />

    <Button
        android:id="@+id/btn_make_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:text="@string/btn_make_order" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="18dp"
        android:text="@string/text_amount_on_store"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_store_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_balance"
        android:layout_marginEnd="95dp"
        android:text="@string/empty_string"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>