<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_edit_customer"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:layout_marginStart="17dp"
        android:text="@string/btn_edit_customer" />

    <Button
        android:id="@+id/btn_add_customer"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_edit_customer"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_add_customer" />

    <EditText
        android:id="@+id/insert_customer_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/edit_customer_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/insert_customer_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/edit_number" />

    <EditText
        android:id="@+id/insert_customer_address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="213dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_address" />

</RelativeLayout>