<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/btnMakeOrder"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="42dp"
        android:text="@string/btn_make_order"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnSendOrder"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnMakeOrder"
        android:layout_marginBottom="128dp"
        android:text="@string/btn_send_order"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnArchiveOrders"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSendOrder"
        android:layout_marginRight="10dp"
        android:text="@string/btn_archive_orders"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnPrepareOrder"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnMakeOrder"
        android:layout_marginRight="10dp"
        android:text="@string/btn_prepare_order"
        android:textSize="19sp" />
</RelativeLayout>